Various discussion hidden fixes on document page
Summary:
- Fix document outline behavior
  - Prevent error in affix code
  - Affixes in proper locations now
  - Doesn't pop out of the container
- Gray border under title now present when discussion hidden

Resolves T303
Resolves T293
Resolves T294

Test Plan:
- Check outline behavior, per notes above
- Check style between discussion hidden / open

Reviewers: doshitan

Reviewed By: doshitan

Maniphest Tasks: T303, T294, T293

Differential Revision: https://phabricator.opengovfoundation.org/D192

--- a/resources/assets/sass/document.scss
+++ b/resources/assets/sass/document.scss
@@ -18,6 +18,7 @@
 }
 
 .support-btns {
+  min-height: 10px; // Needed when discussion is hidden
   padding-bottom: 0;
   margin: 30px 0;
   position: relative;
